# PeakFit

./: .gitattributes  .gitignore  .pdm-python  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  versioneer.py
example/: b1_offsets.txt  pseudo3d.list  run.sh  run_mc.sh
example/Fits/: 1000N-H.out  1002N-H.out  100N-H.out  1011N-H.out  1013N-H.out  101N-H.out  102N-H.out  103N-H.out  104N-H.out  105N-H.out  106N-H.out  107N-H.out  108N-H.out  109N-H.out  10N-H.out  110N-H.out  111N-H.out  112N-H.out  113N-H.out  114N-H.out  115N-H.out  116N-H.out  118N-H.out  119N-H.out  11N-H.out  120N-H.out  121N-H.out  122N-H.out  123N-H.out  124N-H.out  125N-H.out  126EN-H.out  126N-H.out  127N-H.out  128N-H.out  129N-H.out  12N-H.out  130N-H.out  131N-H.out  132N-H.out  (+128 more)
example/FitsMC/: 1000N-H.out  1002N-H.out  100N-H.out  1011N-H.out  1013N-H.out  101N-H.out  102N-H.out  103N-H.out  104N-H.out  105N-H.out  106N-H.out  107N-H.out  108N-H.out  109N-H.out  10N-H.out  110N-H.out  111N-H.out  112N-H.out  113N-H.out  114N-H.out  115N-H.out  116N-H.out  118N-H.out  119N-H.out  11N-H.out  120N-H.out  121N-H.out  122N-H.out  123N-H.out  124N-H.out  125N-H.out  126EN-H.out  126N-H.out  127N-H.out  128N-H.out  129N-H.out  12N-H.out  130N-H.out  131N-H.out  132N-H.out  (+128 more)
examples/: run.sh  run_mc.sh
peakfit/: __init__.py  __main__.py  _version.py  cli.py  clustering.py  computing.py  messages.py  monte_carlo.py  noise.py  peakfit.py  peaklist.py  plot_cest.py  plot_cpmg.py  plot_intensities.py  plots.py  shapes.py  util.py
tests/: test_peakfit.py
