[tool.poetry]
name        = "PeakFit"
version     = "0.2.0-dev1"
description = "PeakFit allow for lineshape fitting in pseudo-3D NMR spectra."
license     = "BSD 3-Clause"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
]
authors     = ["Guillaume Bouvignies <gbouvignies@gmail.com>"]
readme      = "README.md"
repository  = "https://github.com/gbouvignies/PeakFit"
homepage    = "https://github.com/gbouvignies/PeakFit"

    [tool.poetry.dependencies]
    python     = ">=3.8,<3.10"
    numpy      = "^1.20.2"
    scipy      = "^1.6.3"
    matplotlib = "^3.4.1"
    lmfit      = "^1.0.2"
    nmrglue    = "^0.8"

    [tool.poetry.dev-dependencies]
    black      = "^21.5b2"
    pre-commit = "^2.12.1"
    flake8     = "^3.9.1"

    [tool.poetry.scripts]
    peakfit   = "peakfit.peakfit:main"
    plot_cpmg = "peakfit.plot_cpmg:main"
    plot_cest = "peakfit.plot_cest:main"


[tool.black]
line-length    = 88
target-version = ['py38']
include        = '\.pyi?$'
exclude        = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
