[tool.poetry]
name = "PeakFit"
version = "0.3.1"
description = "PeakFit allow for lineshape fitting in pseudo-3D NMR spectra."
license = "GPL-3.0-only"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
authors = ["Guillaume Bouvignies <gbouvignies@gmail.com>"]
readme = "README.md"
repository = "https://github.com/gbouvignies/PeakFit"
homepage = "https://github.com/gbouvignies/PeakFit"

  [tool.poetry.dependencies]
  python     = ">=3.9,<3.12"
  numpy      = "^1.24.1"
  scipy      = "^1.10.0"
  matplotlib = "^3.6.3"
  lmfit      = "^1.1.0"
  nmrglue    = "^0.9"

  [tool.poetry.dev-dependencies]
  black      = "^22.3.0"
  pre-commit = "^2.18.1"
  flake8     = "^4.0.1"

  [tool.poetry.scripts]
  peakfit   = "peakfit.peakfit:main"
  plot_cpmg = "peakfit.plot_cpmg:main"
  plot_cest = "peakfit.plot_cest:main"



[tool.black]
target-version = ['py39']


[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
