[project]
 name = "PeakFit"
 description = "PeakFit allow for lineshape fitting in pseudo-3D NMR spectra."
 authors = [{ name = "Guillaume Bouvignies", email = "guillaume.bouvignies@ens.psl.eu" }]
 dependencies = [
     "numpy>=1.26.4",
     "lmfit>=1.3.1",
     "matplotlib>=3.9.0",
     "rich>=13.7.1",
     "nmrglue>=0.10",
     "pandas>=2.2.2",
     "scipy>=1.13.1",
     "openpyxl>=3.1.2",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
 license = { text = "GPL-3.0-or-later" }
 dynamic = ["version"]

 [project.scripts]
  peakfit          = "peakfit.peakfit:main"
  plot_cpmg        = "peakfit.plot_cpmg:main"
  plot_cest        = "peakfit.plot_cest:main"
  plot_intensities = "peakfit.plot_intensities:main"

[build-system]
 requires      = ["pdm-backend"]
 build-backend = "pdm.backend"

[tool.pdm]
 distribution = true

 [tool.pdm.version]
  source = "scm"

 [tool.ruff.lint]
  select = ["ALL"]
  ignore = [
   "ANN101",
   "ANN102",
   "COM812",
   "ISC001",
   "TCH001",
   "TCH002",
   "TCH003",
   "D100",
   "D101",
   "D102",
   "D103",
   "D104",
   "D105",
   "D107",
   "S311",
  ]

  [tool.ruff.lint.isort]
   known-first-party = ["peakfit"]

  [tool.ruff.lint.pydocstyle]
   convention = "google"
