[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = peakfit/_version.py
versionfile_build = peakfit/_version.py
tag_prefix =
parentdir_prefix = peakfit-

[isort]
known_first_party = peakfit
known_third_party = lmfit, asteval
skip = setup.py, versioneer.py, _version.py
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
line_length = 88

